# UCraft

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  config.h  config_adv.h
.github/workflows/: cmake-multi-platform.yml
include/UCraft/: UCraft.h  c2s.h  encryption.h  enums.h  game.h  https.h  log.h  player.h  s2c.h  socketio.h  util.h  wrapper.h  wrapper_unix.h  wrapper_win.h
include/UCraft/blocks/: blocks.h
src/: CMakeLists.txt  UCraft.c  c2s.c  encryption.c  game.c  https.c  log.c  main.c  player.c  s2c.c  socketio.c  util.c
src/blobs/: codec.c
util/blocks/: blocks.py
util/codec/: codec.py
util/entities/: metadata.py
util/protocol/: extract.py
